[package]
name = "yew-hava-durumu"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
gloo = "0.11"
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = "0.3.70"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
wasm-bindgen-futures = "0.4.43"
 